--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de Crianças - FCS</title>
+  <link rel="Website Icon" href="fcs-logo.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&family=Outfit&family=Questrial&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&family=Questrial&display=swap" rel="stylesheet">
 </head>
 
 <header class="cabecalho">
@@ -34,6 +38,30 @@
       <!-- Registros serão carregados dinamicamente aqui -->
     </tbody>
   </table>
+
+  <footer class="footer-atrian">
+    <div class="footer-top fade-left">
+        <div class="ladoalado">
+            <img src="atrián_logo_transparente.png" alt="Logo Atrián" class="footer-logo">
+            <h1 class="josefin-sans">Atrián</h1>
+        </div>
+        <div class="footer-contact">
+            <p>
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSBnqGMKfRbXXvVTWrDNnlGGfPxKpWSbjxRrgdhpBJxLmCBbRXlldBphjnBsxldvHxKBHrJJ" target="_blank">contato@atrian.com</a>
+                | <a href="https://api.whatsapp.com/send/?phone=%2B5551981516356&text&type=phone_number&app_absent=0" target="_blank">+55 51 98151 6356</a>
+            </p>
+        </div>
+        <div class="footer-social">
+            <a href="https://api.whatsapp.com/send/?phone=%2B5551981516356&text&type=phone_number&app_absent=0" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a>
+            <a href="https://www.instagram.com/_brivia/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/bernardo-mattos-renner-587ab4367/" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
+        </div>
+    </div>
+
+    <div class="footer-copy">
+        &copy; 2025 Atrián. Todos os direitos reservados.
+    </div>
+</footer>
 
   <script src="script.js"></script>
 </body>
