--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de Crianças - FCS</title>
-  <link rel="Website Icon" href="fcs-logo.png">
+  <link rel="Website Icon" href="fcs_logo.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 </head>
 
 <header class="cabecalho">
-    <img src="fcs-logo.png" alt="Logo FCS" class="logo-fcs" />
+    <img src="fcs_logo.png" alt="Logo FCS" class="logo-fcs" />
   </header>
   
 <body>
