--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   
   <h1 class="outfit-fonte">Cadastro de Crianças - Fundação Casa dos Sonhos</h1>
 
+  <div class="tabela-container">
   <table id="tabela-criancas">
     <thead>
       <tr>
@@ -35,9 +36,10 @@
       </tr>
     </thead>
     <tbody>
-      <!-- Registros serão carregados dinamicamente aqui -->
+      
     </tbody>
   </table>
+</div>
 
   <footer class="footer-atrian">
     <div class="footer-top fade-left">
